refactored code to follow SOLID

--- a/src/components/tables/table.module.css
+++ b/src/components/tables/table.module.css
@@ -3,3 +3,11 @@
   width: 50%;
   height: 50%;
 }
+
+.ReactTable {
+  position: relative;
+  margin: auto;
+  table-layout: auto;
+  text-align: center;
+  column-width: auto;
+}
