--- a/src/components/tables/table.css
+++ b/src/components/tables/table.css
@@ -1,9 +1,9 @@
-.Table {
+/* .Table {
   box-sizing: border-box;
   width: 50%;
   height: 50%;
   position: relative;
   text-align: center;
   padding-left: 10px;
-}
+} */
 
