--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -11,8 +11,8 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
+} */
+/* 
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -26,8 +26,8 @@
 
 .App-link {
   color: #61dafb;
-}
-
+} */
+/* 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,13 +35,13 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
 }
 
 .home,
@@ -68,7 +68,7 @@
 }
 
 .services {
-  background-image: url('./assets/images/img-2.jpg');
+  background-image: url("./assets/images/img-2.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -77,7 +77,7 @@
 }
 
 .products {
-  background-image: url('./assets/images/img-3.jpg');
+  background-image: url("./assets/images/img-3.jpg");
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
@@ -86,7 +86,7 @@
 }
 
 .contact-us {
-  background-image: url('./assets/images/img-4.jpg');
+  background-image: url("./assets/images/img-4.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -95,7 +95,7 @@
 }
 
 .sign-up {
-  background-image: url('./assets/images/img-7.jpg');
+  background-image: url("./assets/images/img-7.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -104,7 +104,7 @@
 }
 
 .marketing {
-  background-image: url('./assets/images/img-6.jpg');
+  background-image: url("./assets/images/img-6.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -113,7 +113,7 @@
 }
 
 .consulting {
-  background-image: url('./assets/images/img-5.jpg');
+  background-image: url("./assets/images/img-5.jpg");
   background-position: bottom;
   background-size: cover;
   background-repeat: no-repeat;
