--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,3 @@
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-/* 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-} */
-/* 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -47,7 +8,7 @@
 .home,
 .services,
 .products,
-.contact-us,
+.weather-page,
 .sign-up,
 .marketing,
 .consulting {
@@ -85,13 +46,13 @@
   font-size: 100px;
 }
 
-.contact-us {
-  background-image: url("./assets/images/img-4.jpg");
+.weather-page {
+  /* background-image: url("./assets/images/img-4.jpg"); */
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat;
   color: #fff;
-  font-size: 100px;
+  font-size: 100px; */
 }
 
 .sign-up {
