--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 .marketing,
 .consulting {
   /* display: flex; */
-  height: 90vh;
+  /* height: 90vh; */
   /* align-items: center; */
   /* justify-content: center; */
   /* font-size: 3rem; */
@@ -23,6 +23,7 @@
   /* background-image: url('./assets/images/img-1.jpg'); */
   background-position: center;
   background-size: cover;
+  background-color: #1C1B1B;
   /* background-repeat: no-repeat; */
   /* color: #fff; */
   /* font-size: 10px; */
