--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
   /* background-image: url('./assets/images/img-1.jpg'); */
   background-position: center;
   background-size: cover;
-  background-color: #1C1B1B;
+  background-color: #17212e;
   /* background-repeat: no-repeat; */
   /* color: #fff; */
   /* font-size: 10px; */
