--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  /* font-family: "PT Sans", sans-serif;  */
-  font-family: "basefont-medium"
+  font-family: "basefont-regular";
 }
 @font-face {
   font-family: "basefont-regular";
@@ -23,78 +22,21 @@
     url("./assets/fonts/CircularStd-Bold.otf") format("opentype");
 }
 
-.home,
-.services,
-.products,
-.weather-page,
-.sign-up,
-.marketing,
-.consulting {
-  /* display: flex; */
-  /* height: 90vh; */
-  /* align-items: center; */
-  /* justify-content: center; */
-  /* font-size: 3rem; */
-}
-
 .home {
-  /* background-image: url('./assets/images/img-1.jpg'); */
   background-position: center;
   background-size: cover;
   background-color: #17202e;
-  /* background-repeat: no-repeat; */
-  /* color: #fff; */
-  /* font-size: 10px; */
-}
-
-.services {
-  background-image: url("./assets/images/img-2.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
-
-.products {
-  background-image: url("./assets/images/img-3.jpg");
-  background-position: center;
-  background-size: fill;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
 }
 
 .weather-page {
-  /* background-image: url("./assets/images/img-4.jpg"); */
   background-position: center;
   background-size: cover;
-  /* background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px; */
+  background-color: #17202e;
 }
 
 .sign-up {
-  background-image: url("./assets/images/img-7.jpg");
+  /* background-image: url("./assets/images/img-7.jpg"); */
   background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
-
-.marketing {
-  background-image: url("./assets/images/img-6.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
-
-.consulting {
-  background-image: url("./assets/images/img-5.jpg");
-  background-position: bottom;
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
