--- a/src/components/elements/loader.css
+++ b/src/components/elements/loader.css
@@ -1,7 +1,7 @@
 .loader {
   width: 48px;
   height: 48px;
-  border: 3px solid black;
+  border: 3px solid #6e83a4;
   border-radius: 50%;
   display: inline-block;
   position: relative;
